--- a/WebAPI/WebApplication1/WebApplication1.csproj
+++ b/WebAPI/WebApplication1/WebApplication1.csproj
@@ -289,6 +289,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="Properties\PublishProfiles\NamurMotion - Web Deploy %282%29.pubxml" />
+    <None Include="Properties\PublishProfiles\NamurMotion - Web Deploy %283%29.pubxml" />
     <None Include="Properties\PublishProfiles\NamurMotion - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
